# GymAI

./: .aiignore  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.tg  Makefile  README.md  Taskfile.yaml  api.Dockerfile  conftest.py  debug_db.py  docker-compose-local.yml  docker-compose.yml  entrypoint.sh  google_creds.json  main.py  nginx.conf  package.json  project.toml  prompts.py  pyproject.toml  pytest.ini  redis.conf  requirements.txt
.cognee_test_storage/: text_a1e472e5d52ce3135c17c3c91896b86e.txt  text_bbcb5551c6e7c10607f7108700a9b03d.txt
.data_storage/: text_25af3217b4cf9c3151886aff7fa6f17e.txt
.github/workflows/: lint.yml  pre-commit.yml
ai_coach/: __init__.py  api.py  api_security.py  application.py  ask_handler.py  base.py  base_coach.py  coach_actions.py  coach_agent.py  cognee_coach.py  cognee_config.py  enums.py  exceptions.py  gdrive_knowledge_loader.py  gdrive_loader.py  global_system_prompt.txt  hash_store.py  knowledge_base.py  knowledge_loader.py  language.py  lock_cache.py  logging_config.py  main.py  model_settings.py  prompts.py  registry.py  schemas.py  types.py  utils.py
ai_coach/agent/: __init__.py  base.py  coach.py  coach_stub.py  llm_helper.py  tools.py  utils.py
ai_coach/prompt_templates/: program_response.json  subscription_response.json  system_prompt.txt  workout_plan_prompt.txt
ai_coach/prompts/: coach_system_prompt.txt
ai_coach/tests/: test_ask_agent_modes.py  test_ask_ai_api.py  test_coach_agent_adapter.py  test_coach_agent_program_update_types.py  test_dispatch.py  test_refresh_knowledge_api.py
ai_coach/utils/: __init__.py  coach_utils.py  hash_store.py  parsers.py  registry.py
aiohttp/: __init__.py
api/: __init__.py  fields.py  manage.py  settings.py  urls.py
api/accounts/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
api/payments/: admin.py  serializers.py  views.py
api/templates/: reset-password.html
apps/: manage.py
apps/diet_plans/: __init__.py  apps.py  models.py  repos.py
apps/home/: apps.py
apps/metrics/: __init__.py  models.py  utils.py  views.py
apps/payments/: admin.py  apps.py  models.py  repos.py  serializers.py  tasks.py  urls.py  views.py
apps/profiles/: admin.py  apps.py  choices.py  fields.py  models.py  repos.py  serializers.py  urls.py  views.py
apps/webapp/: apps.py  diet_flow.py  exercise_replace.py  package-lock.json  package.json  schemas.py  urls.py  utils.py  view_helpers.py  views.py  vite.config.ts  weekly_survey.py  workout_flow.py
apps/workout_plans/: admin.py  apps.py  models.py  progress_types.py  repos.py  serializers.py  urls.py  views.py
backend/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backend/accounts/: admin.py  emails.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/backend/: settings.py  urls.py  wsgi.py
backend/home/: views.py
backend/payments/: models.py  serializers.py  urls.py  views.py
backend/templates/: reset-password.html
backup/: backup_manager.py  backup_scheduler.py
bot/: buttons_builder.py  commands.py  handlers.py  keyboard_builder.py  keyboards.py  main.py  message_handlers.py  middlewares.py  models.py  pricing.py  prompts.py  singleton.py  states.py
bot/ai_coach/: __init__.py  parsers.py  prompts.py  schemas.py  services.py  utils.py
bot/flows/: __init__.py  plan.py
bot/functions/: chat.py  exercises.py  menus.py  profiles.py  text_utils.py  utils.py  workout_plans.py
bot/handlers/: __init__.py  admin_handler.py  (+15 more)
common/: backend_service.py  cache_manager.py  constants.py  decorators.py  encrypter.py  exceptions.py  exeptions.py  file_manager.py  functions.py  logger.py  models.py  payment_checker.py  payment_handler.py  payment_manager.py  payment_service.py  session.py  settings.py  sheets_manager.py  storage.py  subscription_manager.py  user_service.py  utils.py  workout_scheduler.py
config/: __init__.py  app_settings.py  asgi.py  celery.py  env_settings.py  logger.py  settings.py  test_settings.py  urls.py
core/: ai.py  ai_coach_fallback.py  ai_coach_payloads.py  ai_plan_state.py  ai_question_state.py  cache_manager.py  celery_app.py  celery_signals.py  containers.py  credits.py  debug_celery.py  encrypter.py  encryptor.py  enums.py  exceptions.py  exercises.py  file_manager.py  google_sheets_manager.py  internal_http.py  logger.py  models.py  payment_processor.py  payment_states.py  queues.py  schemas.py  settings.py  tasks.py  validators.py  workout_scheduler.py
deployment/: Dockerfile.django  Dockerfile.tg
docker/: .env.example  Dockerfile  api.Dockerfile  cloudflared-config.yaml  coach.Dockerfile  docker-compose-local.yml  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.conf.template  nginx.local.conf  rabbitmq-entrypoint.sh
evals/: README.md
functions/: chat.py  exercises.py  menus.py  profiles.py  text_utils.py  utils.py  workout_plans.py
loguru/: __init__.py
pydantic/: __init__.py
pydantic_ai/: __init__.py  settings.py
pydantic_settings/: __init__.py
requirements/: requirements.backend.txt  requirements.dev.txt  requirements.lint.txt  requirements.txt
schedulers/: backup_scheduler.py  payment_scheduler.py  sheets_scheduler.py  subscription_scheduler.py  workout_scheduler.py
scripts/: cleanup_cognee_datasets.py
services/: 1.py  api_service.py  backend_service.py  payment_service.py  profile_service.py  user_service.py  workout_service.py
tests/: conftest.py  test_ai_coach_service_agent_header.py  test_api_service.py  test_ask_agent_modes.py  test_ask_ai_api.py  test_backend_service.py  test_coach_agent_adapter.py  test_coach_agent_program_update_types.py  test_cognee_dataset_creation.py  test_dispatch.py  test_payment_service.py  test_profile_service.py  test_show_my_program_menu.py  test_tool_attach_gifs_applies.py  test_tool_search_knowledge.py  test_user_service.py  test_workout_cache_fallback.py  test_workout_service.py
texts/: buttons.yml  commands.yml  exercises.py  messages.yml  resources.py  text_manager.py
(+528 files in other folders)
