[project]
name = "GymBot"
version = "0.1.0"
description = ""
authors = [{ name = "Yevhenii Melnykov", email = "evgeniy@workmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "uvicorn>=0.34.2",
    "aiohttp>=3.10.5",
    "liqpay-python @ git+https://github.com/liqpay/sdk-python",
    "loguru>=0.7.2",
    "setuptools>=75.8.2",
    "psycopg[binary]>=3.2.6",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "redis>=5.2.1",
    "google-cloud-storage>=3.1.0",
    "apscheduler>=3.11.0",
    "python-dateutil>=2.9.0.post0",
    "aiogram>=3.17.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-api-key>=3.0.0",
    "cryptography>=44.0.0",
    "django-filter==25.1",
    "gspread>=6.2.0",
    "google-auth>=2.37.0",
    "django>=5.2",
    "celery>=5.5.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "types-python-dateutil",
    "types-redis",
    "pyrefly>=0.16.2",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".pytest_cache", ".env", "env", "venv", ".venv", "venv-win"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyrefly]
project_includes = ["."]
project_excludes = ["**/__pycache__/**", "**/static/**", "**/templates/**"]
python_interpreter = ".venv/bin/python3"

ignore_errors_in_generated_code = true
replace_imports_with_any = ["core.models"]

[tool.pyrefly.type_checking]
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_unused_ignores = true

[tool.pyrefly.errors]
bad-assignment = true
invalid-argument = true
bad-return = true
no-matching-overload = true
annotation-mismatch = true
assert-type = true
bad-argument-type = true
async-error = true
import-error = true

[[tool.pyrefly.sub_config]]
matches = "**/tests/**"
replace_imports_with_any = ["pytest.*"]

[[tool.pyrefly.sub_config]]
matches = "**/migrations/**"
[tool.pyrefly.sub_config.errors]
bad-assignment = false
