[project]
name = "GymBot"
version = "1.1.0"
description = ""
authors = [{ name = "Yevhenii Melnykov", email = "evgeniy@workmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "uvicorn>=0.34.2",
    "aiohttp>=3.10.5",
    "liqpay-python @ git+https://github.com/liqpay/sdk-python",
    "loguru>=0.7.2",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "redis>=5.2.1",
    "google-cloud-storage>=3.1.0",
    "google-api-python-client>=2.126.0",
    "python-dateutil>=2.9.0.post0",
    "aiogram>=3.17.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-api-key>=3.0.0",
    "cryptography>=44.0.0",
    "django-filter==25.1",
    "gspread>=6.2.0",
    "google-auth>=2.37.0",
    "django>=5.2",
    "celery>=5.5.2",
    "django-redis>=5.4.0",
    "dependency-injector>=4.47.1",
    "pydantic-settings>=2.9.1",
    "django-unfold>=0.59.0",
    "cognee>=0.2.0",
    "PyMuPDF>=1.23.22",
    "python-docx>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "numpy==1.26.4",
    "matplotlib == 3.8.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "types-python-dateutil",
    "types-redis",
    "pyrefly>=0.16.2",
    "django-stubs>=4.2.7",
    "djangorestframework-stubs>=3.14.5",
    "mypy-extensions>=1.0.0",
    "types-PyYAML>=6.0.12.20240311",
    "factory-boy==3.3.0",
    "pytest-django==4.8.0",
    "pytest-asyncio>=0.23",
    "bump-my-version>=1.2.0",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".pytest_cache", ".env", "env", "venv", ".venv", ".venv-win"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyrefly]
project_includes = ["."]
project_excludes = [
    ".git/**",
    "**/__pycache__/**",
    "**/static/**",
    "**/templates/**",
    "**/migrations/**",
    "**/tests/**",
    "**/.venv*/**",
    "**/venv*/**",
]
python_interpreter = ".venv/bin/python3"
ignore_errors_in_generated_code = true
use_untyped_imports = true

[tool.pyrefly.errors]
bad-assignment = true
bad-return = true
bad-argument-type = true
missing-attribute = true
annotation-mismatch = true

[[tool.bumpversion.files]]
filename = "bot/VERSION"

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
