[project]
name = "GymBot"
version = "1.2.3"
description = ""
authors = [{ name = "Yevhenii Melnykov", email = "evgeniy@workmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
    "djangorestframework-api-key>=3.0.0",
    "django-filter>=25.0",
    "django-redis>=6",
    "django-unfold>=0.59.0",
    "gunicorn>=21.2",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "redis>=5",
    "asyncpg>=0.30.0",
    "celery>=5.3",
    "structlog>=24.1",
    "loguru>=0.7.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.2",
    "orjson>=3.9",
    "uvicorn>=0.35.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "aiohttp>=3.10.5",
    "aiogram>=3.17.0",
    "cryptography>=44.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2",
    "google-cloud-storage>=3.1.0",
    "google-api-python-client>=2.126.0",
    "google-auth>=2.37.0",
    "gspread>=6.2.0",
    "dependency-injector>=4.47.1",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
coach = [
  "cognee[neo4j]>=0.2.4",
  "cognee-community-vector-adapter-qdrant",
  "PyMuPDF==1.23.22",
  "dlt[postgres]>=1.15,<2.0",
  "pydantic-ai-slim==0.8.1",
  "openai>=1.80.1,<1.99.9",
  "cachetools>=6.2.3,<7.0",
]

dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "ruff>=0.11.2",
    "mypy>=1.10",
    "pre-commit>=4.2.0",
    "types-requests",
    "types-redis",
    "types-PyYAML",
    "types-python-dateutil",
    "django-stubs>=4.2.7",
    "djangorestframework-stubs>=3.14.5",
    "pyrefly>=0.16.2",
    "factory-boy==3.3.0",
    "bump-my-version>=1.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "bot*",
  "core*",
  "config*",
  "ai_coach*",
]
exclude = [
  "docker*",
  "dumps*",
  "static*",
  "staticfiles*",
  "tests*",
  "nginx*",
  "migrations*",
  "scripts*",
  "data*",
  "docs*",
  "redis*",
]

[tool.setuptools.package-data]
"*" = ["**/templates/**", "**/static/**"]

[tool.ruff]
line-length = 120
exclude = [".git", ".pytest_cache", ".env", "env", "venv", ".venv", ".venv-win"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
exclude = ["config/app_settings.py"]

[tool.pyrefly]
project_includes = [
    "ai_coach",
    "apps",
    "bot",
    "core",
    "config",
]
project_excludes = [
    ".git/**",
    "**/__pycache__/**",
    "**/static/**",
    "**/templates/**",
    "**/migrations/**",
    "**/tests/**",
    "**/.venv/**",
    "**/.venv*/**",
    "**/venv/**",
    "**/venv*/**",
    "**/site-packages/**",
    "**/.ruff_cache/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "ai_coach/agent/knowledge/**",
    "apps/workout_plans/repos.py",
    "bot/handlers/**",
]
python_interpreter = ".venv/bin/python3"
ignore_errors_in_generated_code = true

[tool.pyrefly.errors]
bad-assignment = true
bad-return = true
bad-argument-type = true
missing-attribute = true
annotation-mismatch = true

[[tool.bumpversion.files]]
filename = "VERSION"

[tool.bumpversion]
current_version = "1.2.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
